syntax_check_results.txt
Found 3 syntax errors:
Error in index.html (script #2):
C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_script_1.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

----------------------------------------
Error in index.html (script #3):
C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_script_2.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

----------------------------------------
Error in index.html (script #4):
C:\Users\one\.gemini\antigravity\playground\twilight-parsec\temp_script_3.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

----------------------------------------
